--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 :root{
     --color-primario:#0f172a;
     --color-secundario:#cbd5e1;
-    --color-ternario:#205295;
+    --color-ternario:#1e293b;
     --color-fucsia:#e9409f;
     --white:rgb(238, 238, 238);
     --black:#000;
@@ -132,8 +132,44 @@ button:hover{
 /* skill */
 #skill{
     width: 100%;
-    height: 100vh;
     background-color: var(--color-ternario);
+}
+.containerSkill{
+    width: 100%;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.spanSubTitle{
+    color: var(--color-secundario);
+    font-size: 35px;
+}
+.sectionTitle{
+    text-align: center;
+    padding: 2rem;
+    font-size: 45px;
+    color: var(--color-secundario);
+    text-shadow: 2px 4px 3px rgba(143, 140, 142, 0.3);
+}
+.skillBox{
+    width: 160px;
+    background-color: var(--color-secundario);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 1rem;
+    border-radius: 8px;
+    margin: 2rem;
+}
+.img_skill{
+    width: 80px;
+    margin: .5rem;
+}
+.title_skill{
+    color: var(--color-primario)
 }
 /* medias  */
 @media only screen and (max-width: 600px) {
