--- a/src/style.css
+++ b/src/style.css
@@ -171,6 +171,61 @@ button:hover{
 .title_skill{
     color: var(--color-primario)
 }
+
+/* proyectos */
+#projects{
+    background-color: var(--color-primario);
+    width: 100%; 
+}
+
+.boxCard{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    
+}
+.card{
+    width: 300px;
+    margin: .5rem;
+    background-color: var(--color-ternario);
+    padding: 1rem;
+    color: var(--color-secundario);
+    border-radius: 8px;
+
+}
+.imgProjects{
+    width: 100%;
+    height: 200px;
+    padding-bottom: 1rem;
+}
+.boxLinks{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    padding-top: 1rem;
+}
+.links{
+    width: 100px;
+    background-color: var(--color-fucsia);
+    color: var(--color-secundario);
+    text-decoration: none;
+    padding: .5rem;
+    border-radius: 5px;
+    text-align: center;
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    box-shadow:  2px 4px 3px rgba(134, 133, 133, 0.3);
+
+}
+.links:hover{
+    background-color: var(--color-ternario);
+    color: var(--color-fucsia);
+}
 /* medias  */
 @media only screen and (max-width: 600px) {
     .burgerMenu img{
